--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -2,7 +2,6 @@ name: Build and Release (Electron)
 
 on:
   push:
-    branches: [main]
     tags: ["v*"]
 
 permissions:
@@ -65,23 +64,22 @@ jobs:
 
       - name: Build mac
         if: matrix.os == 'macos-latest'
-        run: npx electron-builder --mac --publish ${{ startsWith(github.ref, 'refs/tags/') && 'always' || 'never' }}
+        run: npx electron-builder --mac
 
       - name: Build windows
         if: matrix.os == 'windows-latest'
-        run: npx electron-builder --win --publish ${{ startsWith(github.ref, 'refs/tags/') && 'always' || 'never' }}
+        run: npx electron-builder --win
 
       - name: Build linux
         if: matrix.os == 'ubuntu-latest'
-        run: npx electron-builder --linux --publish ${{ startsWith(github.ref, 'refs/tags/') && 'always' || 'never' }}
+        run: npx electron-builder --linux
 
-      - name: Upload artifacts (branch builds)
-        if: github.ref_type == 'branch'
-        uses: actions/upload-artifact@v4
+      - name: Release
+        uses: softprops/action-gh-release@v2
+        if: startsWith(github.ref, 'refs/tags/')
         with:
-          name: ${{ runner.os }}-artifacts
-          path: |
+          files: |
             dist/**/*.dmg
-            dist/**/*.zip
             dist/**/*.exe
             dist/**/*.AppImage
+
